Make Neutron router scenarios work with network context
Usage of NeutronNetworks.create_and_*_routers without network context
is deprecated (ref. https://goo.gl/peijFT), however these scenario can
not be run with network context due to a bug.

This patch fixes the bug and also enables the network context in gates
for all Neutron scenarios that should be using it.

Change-Id: I5783ea110290332234b94ed8adbdbe8a1d9d0f14
Co-Authored-By: Alexander Maretskiy <amaretskiy@mirantis.com>
Closes-Bug: #1523417

--- a/rally-jobs/rally-mos.yaml
+++ b/rally-jobs/rally-mos.yaml
@@ -523,6 +523,7 @@
         times: 1
         concurrency: 1
       context:
+        network: {}
         users:
           tenants: 1
           users_per_tenant: 1
@@ -547,6 +548,7 @@
         times: 1
         concurrency: 1
       context:
+        network: {}
         users:
           tenants: 1
           users_per_tenant: 1
@@ -570,6 +572,7 @@
         times: 1
         concurrency: 1
       context:
+        network: {}
         users:
           tenants: 1
           users_per_tenant: 1
@@ -620,6 +623,7 @@
         times: 1
         concurrency: 1
       context:
+        network: {}
         users:
           tenants: 5
           users_per_tenant: 5
@@ -647,6 +651,7 @@
         times: 1
         concurrency: 1
       context:
+        network: {}
         users:
           tenants: 1
           users_per_tenant: 1
@@ -675,6 +680,7 @@
         times: 1
         concurrency: 1
       context:
+        network: {}
         users:
           tenants: 1
           users_per_tenant: 1
@@ -718,6 +724,7 @@
         times: 1
         concurrency: 1
       context:
+        network: {}
         users:
           tenants: 1
           users_per_tenant: 1
@@ -740,6 +747,7 @@
         times: 1
         concurrency: 1
       context:
+        network: {}
         users:
           tenants: 1
           users_per_tenant: 1
