[Reports] Improve HTML report and add dummy_output scenario
This finally takes new output format into use by two main changes:

 * Reworking and refactoring of HTML report frontend, mainly in
   template rally/ui/templates/task/report.html, so we have
   the following new features and improvements:

   - show output in new format, according to the spec
   - Added AngularJS directive (via attribute `widget')
     that can render all currently used NVD3 charts,
     and generic HTML tables
   - all existent charts (as well as new output charts) and
     generic tables are displayed by our new AngularJS directive
   - Fix: do not show StackedArea if there are less than 2 points
   - code optimization and rafactoring

 * New scenario `Dummy.dummy_output' is added, so we can
   generate random output in new format to see how it is
   displayed in reports.

Change-Id: Ifa30e6ec86217898fbd6133eaa3e3552f466bf26

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -589,6 +589,16 @@
           min: 20
           max: 80
 
+  Dummy.dummy_output:
+    -
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
+
   Dummy.dummy_with_scenario_output:
     -
       runner:
