--- a/rally-jobs/rally-designate.yaml
+++ b/rally-jobs/rally-designate.yaml
@@ -13,6 +13,20 @@
         failure_rate:
           max: 0
 
+  DesignateBasic.create_and_update_domain:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 10
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   DesignateBasic.create_and_delete_records:
     -
       args:
