Fixed Glance Certification part
Change-Id: I83ad809e3a6b78d117fd85499ee43e72fde73a48

--- a/certification/openstack/macro/macro.yaml
+++ b/certification/openstack/macro/macro.yaml
@@ -89,7 +89,7 @@
 {%- endmacro %}
 
 {%- macro glance_args(location, container="bare", type="qcow2") %}
-        image_container: {{ container }}
-        image_type: {{ type }}
+        container_format: {{ container }}
+        disk_format: {{ type }}
         image_location: {{ location }}
 {%- endmacro %}
