[Verify] Configure 'catalog_type' in 'data-processing' section
Sahara has two service types: 'data_processing' and 'data-processing'.
'data_processing' is deprecated, but it can be used in previous OpenStack
releases. So we need to configure the 'catalog_type' option to support
environments where 'data_processing' is used as service type for Sahara.

Change-Id: Iddd8da9dcde7ab0e0ea4f315fe78965e9b2474ec

--- a/rally/verification/tempest/config.ini
+++ b/rally/verification/tempest/config.ini
@@ -27,6 +27,8 @@ attach_encrypted_volume = False
 
 [dashboard]
 
+[data-processing]
+
 [data_processing-feature-enabled]
 plugins = vanilla,cdh,mapr,spark,ambari
 
