Images context: accept arbitrary image create args
This deprecates the min_ram and min_disk arguments in favor of
image_args, which lets the user specify any image creation keyword
arguments they want.

This provides a workaround for the bug that prevents images created in
the images context from actually being used by letting the user
specify that the image should be public, and thus can be used by
scenarios running other tenants than the admin user's tenant. Also
adds a gate job to ensure that images created by the images context
can be used in a scenario.

Partial-Bug: 1503744
Change-Id: I200821f4850073990878c38f04959ecf1ff9c522

--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -100,6 +100,33 @@
         failure_rate:
           max: 0
 
+    -
+      args:
+        size: 1
+        image:
+          name: "image-context-test"
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 2
+        roles:
+          - admin
+        images:
+          image_url: "~/.rally/extra/fake-image.img"
+          image_type: "qcow2"
+          image_container: "bare"
+          images_per_tenant: 1
+          image_name: "image-context-test"
+          image_args:
+            is_public: True
+      sla:
+        failure_rate:
+          max: 0
+
   CinderVolumes.create_and_update_volume:
     -
       args:
