Drop py26 from tox
Since we not maintain py26 we could drop it from the environment
list of tox.

Change-Id: I32928b5b327b22d008aaf6999e2df47e5c7fd700

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = py26,py27,py33,py34,pep8
+envlist = py27,py33,py34,pep8
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
@@ -22,9 +22,6 @@ basepython = python2.7
 [testenv:pep8]
 commands = flake8
 distribute = false
-
-[testenv:py26]
-basepython = python2.6
 
 
 [testenv:py34]
