[Docs] Remove _build directory before main cmd
`tox -edocs` doesn't work as expected if ./docs/source/_build dir exists.

Change-Id: Ibe37590e0c9cbb1de06a488407bb9596120d87e7

--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,15 @@ setenv = VIRTUAL_ENV={envdir}
          LANGUAGE=en_US:en
          LC_ALL=C
          PYTHONHASHSEED=0
+whitelist_externals = find
+                      rm
+                      make
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 install_command = pip install -U {opts} {packages}
 usedevelop = True
 commands =
-  /usr/bin/find . -type f -name "*.pyc" -delete
+  find . -type f -name "*.pyc" -delete
   python setup.py testr --slowest --testr-args='{posargs}'
 distribute = false
 basepython = python2.7
@@ -41,7 +44,9 @@ commands = {toxinidir}/tests/ci/cover.sh {posargs}
 
 [testenv:docs]
 changedir = doc/source
-commands = make html
+commands =
+  rm -rf _build
+  make html
 
 [testenv:genconfig]
 commands =
