--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ requests>=2.8.1
 SQLAlchemy<1.1.0,>=0.9.9
 sphinx!=1.2.0,!=1.3b1,<1.3,>=1.1.2
 six>=1.9.0
+testtools>=1.4.0
 
 # Python 2.6 related packages(see rally.common.costilius for more details)
 ordereddict
