--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # The order of packages is significant, because pip processes them in the order
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
+alembic>=0.8.0 # MIT
 Babel>=1.3 # BSD
 boto>=2.32.1 # MIT
 decorator>=3.4.0 # BSD
