--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -825,6 +825,26 @@
         failure_rate:
           max: 0
 
+    -
+      args:
+        image_location: "{{ cirros_image_url }}"
+        container_format: "bare"
+        disk_format: "qcow2"
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 3
+        api_versions:
+          glance:
+            version: 2
+      sla:
+        failure_rate:
+          max: 0
+
   GlanceImages.create_and_list_image:
     -
       args:
