--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ commands =
   python setup.py testr --slowest --testr-args='{posargs}'
 distribute = false
 basepython = python2.7
+passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 
 [testenv:pep8]
 commands = flake8
