--- a/rally-jobs/rally-mos.yaml
+++ b/rally-jobs/rally-mos.yaml
@@ -826,3 +826,38 @@
       sla:
         failure_rate:
           max: 0
+
+  VMTasks.runcommand_heat:
+    -
+      args:
+        workload:
+          resource: ["rally.plugins.workload", "siege.py"]
+          username: "fedora"
+        template: /home/rally/.rally/extra/workload/wordpress_heat_template.yaml
+        files:
+          wp-instances.yaml: /home/rally/.rally/extra/workload/wp-instances.yaml
+        parameters:
+          wp_instances_count: 2
+          wp_instance_type: gig
+          instance_type: gig
+          wp_image: fedora
+          image: fedora
+          network_id: 9d477754-e9ba-4560-9b2b-9ce9d36638ce
+          router_id: c497caa1-9d73-402b-bcd1-cc269e9af29e
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        flavors:
+          - name: gig
+            ram: 1024
+            disk: 4
+            vcpus: 1
+      runner:
+        concurrency: 1
+        timeout: 3000
+        times: 1
+        type: constant
+      sla:
+        failure_rate:
+          max: 0
