--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -657,11 +657,20 @@
 # CirrOS image URL (string value)
 #cirros_img_url = http://download.cirros-cloud.net/0.3.4/cirros-0.3.4-x86_64-disk.img
 
-# Image disk format (string value)
+# Image disk format to use when creating the image (string value)
 #disk_format = qcow2
 
-# Image container formate (string value)
+# Image container format to use when creating the image (string value)
 #container_format = bare
+
+# Regular expression for name of an image to discover it in the cloud
+# and use it for the tests. Note that when Rally is searching for the
+# image, case insensitive matching is performed. Specify nothing
+# ('name_regex =') if you want to disable discovering. In this case
+# Rally will create needed resources by itself if the values for the
+# corresponding config options are not specified in the Tempest config
+# file (string value)
+#name_regex = ^.*(cirros|testvm).*$
 
 
 [role]
