Add Cinder v1 test to gate
e29093f made cinder v2 the default, but didn't change the gate checks
to ensure that we are testing both v2 and v1. This swaps the scenario
that was formerly pinned to v2 to v1 so that we are testing both API
versions.

Change-Id: Ib6d8bbda5185c8aa7886a8d64ebcb96988aae1e7

--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -94,8 +94,8 @@
           users_per_tenant: 2
         api_versions:
           cinder:
-            version: 2
-            service_name: cinderv2
+            version: 1
+            service_name: cinder
       sla:
         failure_rate:
           max: 0
