--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -860,3 +860,19 @@
       sla:
         failure_rate:
           max: 0
+
+  NovaFlavors.list_flavors:
+    -
+      args:
+        detailed: True
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
