Expand Nova API benchmark in Rally
Add support for listing nova hosts, agents, availability-zones
and aggregates.

blueprint extend-api-benchmark-in-nova-scenarios

Change-Id: I1facd17719299128e758334b468c01a83518889e

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -876,3 +876,45 @@
       sla:
         failure_rate:
           max: 0
+
+  NovaAgents.list_agents:
+    -
+      runner:
+        type: "constant"
+        concurrency: 2
+        times: 5
+      sla:
+        failure_rate:
+          max: 0
+
+  NovaAggregates.list_aggregates:
+    -
+      runner:
+        type: "constant"
+        concurrency: 2
+        times : 5
+      sla:
+        failure_rate:
+          max: 0
+
+  NovaAvailabilityZones.list_availability_zones:
+    -
+      args:
+        detailed: true
+      runner:
+        type: "constant"
+        concurrency: 2
+        times: 5
+      sla:
+        failure_rate:
+          max: 0
+
+  NovaHosts.list_hosts:
+    -
+      runner:
+        type: "constant"
+        concurrency: 2
+        times: 5
+      sla:
+        failure_rate:
+          max: 0
