--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -946,3 +946,13 @@
       sla:
         failure_rate:
           max: 0
+
+  NovaServices.list_services:
+    -
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      sla:
+        failure_rate:
+          max: 0
