--- a/tox.ini
+++ b/tox.ini
@@ -35,9 +35,18 @@ basepython = python3.4
 [testenv:venv]
 commands = {posargs}
 
+
+[testenv:debug]
+commands = oslo_debug_helper -t tests {posargs}
+
+[testenv:debug34]
+basepython = python3.4
+commands = oslo_debug_helper -t tests {posargs}
+
 [testenv:cli]
 sitepackages = True
 commands = {toxinidir}/tests/ci/rally-integrated.sh
+
 
 [testenv:cover]
 commands = {toxinidir}/tests/ci/cover.sh {posargs}
