--- a/rally-jobs/unstable-neutron.yaml
+++ b/rally-jobs/unstable-neutron.yaml
@@ -1,11 +1,12 @@
 {% set image_name = "^cirros.*uec$" %}
+{% set flavor_name = "m1.nano" %}
 ---
 
   NovaSecGroup.boot_and_delete_server_with_secgroups:
     -
       args:
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
         image:
           name: {{image_name}}
         security_group_count: 5
@@ -32,7 +33,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
         volume_size: 1
@@ -52,7 +53,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
         volume_size: 1
@@ -75,7 +76,7 @@
         image:
           name: {{image_name}}
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
       runner:
         type: "constant"
         times: 3
@@ -107,7 +108,7 @@
           image:
             name: {{image_name}}
           flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
           servers_per_tenant: 2
       sla:
           failure_rate:
@@ -130,7 +131,7 @@
           image:
             name: {{image_name}}
           flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
           servers_per_tenant: 1
       sla:
           failure_rate:
@@ -158,7 +159,7 @@
           image:
             name: {{image_name}}
           flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
           servers_per_tenant: 2
       sla:
           failure_rate:
