--- a/rally-jobs/rally-mos.yaml
+++ b/rally-jobs/rally-mos.yaml
@@ -129,6 +129,8 @@
 
   HeatStacks.create_and_list_stack:
     -
+      args:
+        template_path: "~/.rally/extra/default.yaml.template"
       runner:
         type: "constant"
         times: 1
@@ -137,9 +139,14 @@
         users:
           tenants: 1
           users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
 
   HeatStacks.create_and_delete_stack:
     -
+      args:
+        template_path: "~/.rally/extra/default.yaml.template"
       runner:
         type: "constant"
         times: 1
@@ -148,6 +155,9 @@
         users:
           tenants: 1
           users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
 
   Authenticate.keystone:
     -
@@ -534,6 +544,10 @@
           nova:
             security_groups: -1
             security_group_rules: -1
+      sla:
+        failure_rate:
+          max: 0
+
 
 
   NeutronNetworks.create_and_list_networks:
