--- a/rally-jobs/rally-mos.yaml
+++ b/rally-jobs/rally-mos.yaml
@@ -1,4 +1,3 @@
-{%- set sahara_service_type = sahara_service_type|default("data_processing") %}
 ---
 {%- include "sahara.yaml" %}
 
@@ -254,7 +253,7 @@
           name: "m1.tiny"
         image:
           name: "TestVM|cirros.*uec"
-        floating_network: "net04_ext"
+        floating_network: "{{external_net}}"
         use_floating_ip: true
         command:
           script_file: "~/.rally/extra/instance_dd_test.sh"
@@ -842,8 +841,8 @@
           instance_type: gig
           wp_image: fedora
           image: fedora
-          network_id: 9d477754-e9ba-4560-9b2b-9ce9d36638ce
-          router_id: c497caa1-9d73-402b-bcd1-cc269e9af29e
+          network_id: {{external_net_id}}
+          router_id: {{external_router_id}}
       context:
         users:
           tenants: 1
