Remove deprecated 'script' and 'interpreter' in favor of 'command'
VM task scenarios executes a script with a interpreter provided through
a formatted argument called 'command' which expects the remote_path or local_path
of the script and optionally an interpreter with which the script has to be
executed.

Change-Id: If2e65b553a0f26180267ef0b8e2239e3efe4ea17

--- a/samples/tasks/scenarios/vm/boot-runcommand-delete-with-disk.yaml
+++ b/samples/tasks/scenarios/vm/boot-runcommand-delete-with-disk.yaml
@@ -13,8 +13,8 @@
         floating_network: "public"
         use_floating_ip: true
         force_delete: false
-        script: "samples/tasks/support/instance_dd_test.sh"
-        interpreter: "/bin/sh"
+        command:
+            remote_path: "samples/tasks/support/instance_dd_test.sh"
         username: "cirros"
       runner:
         type: "constant"
