--- a/samples/tasks/scenarios/vm/boot-runcommand-delete.yaml
+++ b/samples/tasks/scenarios/vm/boot-runcommand-delete.yaml
@@ -9,8 +9,8 @@
             name: "^cirros.*uec$"
         floating_network: "public"
         force_delete: false
-        script: "samples/tasks/support/instance_dd_test.sh"
-        interpreter: "/bin/sh"
+        command:
+            remote_path: "samples/tasks/support/instance_dd_test.sh"
         username: "cirros"
       runner:
         type: "constant"
