unify *_kwargs name in scenarios
When running a scenario, `kwargs` is used as default key-word arguments.
But in some scenarios, there are more and one services being called, and
we use xxx_kwargs for this case.

However, some xxx_kwargs are not unifed for same usage[0]. Unifying
these could avoid midleading for end users. Another improvement is to
add xxx_kwargs with empty settings for scenario config files.

[0] http://paste.openstack.org/show/489505/

Change-Id: I80f49be5c1cd21812d6b2d56b0f4279f0cf4f402

--- a/samples/tasks/scenarios/cinder/create-and-update-volume.yaml
+++ b/samples/tasks/scenarios/cinder/create-and-update-volume.yaml
@@ -5,6 +5,7 @@
         update_volume_kwargs:
            display_name: "name_updated"
            display_description: "desc_updated"
+        create_volume_kwargs: {}
         size: 1
       runner:
         type: "constant"
