--- a/samples/tasks/scenarios/nova/boot-server-attach-created-volume-and-live-migrate.yaml
+++ b/samples/tasks/scenarios/nova/boot-server-attach-created-volume-and-live-migrate.yaml
@@ -8,6 +8,8 @@ NovaServers.boot_server_attach_created_volume_and_live_migrate:
       name: "^cirros.*uec$"
     size: 10
     block_migration: false
+    boot_server_kwargs: {}
+    create_volume_kwargs: {}
   runner:
     type: "constant"
     times: 5
