--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -859,6 +859,29 @@
         users:
           tenants: 1
           users_per_tenant: 1
+        api_versions:
+          glance:
+            version: 1
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        image_location: "~/.rally/extra/fake-image.img"
+        container_format: "bare"
+        disk_format: "qcow2"
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        api_versions:
+          glance:
+            version: 2
       sla:
         failure_rate:
           max: 0
