[Plugins] New scenario Dummy.dummy_random_action
Generate atomic actions with random durations.

This scenario is suitable for demonstration of upcoming
trends report (will be introduced in further patches)

Change-Id: I46207c2d7db848f923820fcc499c46d3c8ecb855

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -618,6 +618,13 @@
         times: 50
         concurrency: 10
 
+  Dummy.dummy_random_action:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+
   FakePlugin.testplugin:
     -
       runner:
