Add configuration for Heat caching during validation
With this configuration you can test heat caching.
Already was in heat repo, just added it to rally.

Change-Id: I8bd35a0f96a9f73a33f434ad7e3412db6f1d95ad

--- a/rally-jobs/heat.yaml
+++ b/rally-jobs/heat.yaml
@@ -64,6 +64,21 @@
         failure_rate:
           max: 0
 
+    -
+      args:
+        template_path: "~/.rally/extra/resource_group_with_constraint.yaml.template"
+      runner:
+        type: "constant"
+        times: 6
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   HeatStacks.create_check_delete_stack:
     -
       args:
