Add Cinder volume_types context
Allows creation of volume types before scenarios.

Change-Id: I592c222b4d452772411685adff25aa5d3de29334
Related-Bug: #1559344

--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -494,6 +494,23 @@
       sla:
         failure_rate:
           max: 0
+    -
+      args:
+        size: 1
+        volume_type: test
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        volume_types:
+          - test
+      sla:
+        failure_rate:
+          max: 0
 
   CinderVolumes.create_volume_backup:
     -
