--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,10 @@ pbr>=1.6 # Apache-2.0
 PrettyTable<0.8,>=0.7 # BSD
 PyYAML>=3.1.0 # MIT
 python-designateclient>=1.5.0 # Apache-2.0
+gnocchiclient>=2.2.0 # Apache-2.0
 python-glanceclient>=2.0.0 # Apache-2.0
 python-keystoneclient!=1.8.0,!=2.1.0,>=1.6.0 # Apache-2.0
+keystoneauth1>=2.1.0 # Apache-2.0
 python-novaclient!=2.33.0,>=2.29.0 # Apache-2.0
 python-neutronclient>=4.1.1 # Apache-2.0
 python-cinderclient>=1.6.0 # Apache-2.0
