Allow max_avg_sla per atomic actions
This adds a plugin to collect the avg time duration for each
atomic action. With this, SLAs setting time maximums can be
applied to individual atomic actions that are part of a run.

For example:

 NeutronNetworks.create_and_list_ports:
    -
      sla:
        max_avg_duration_per_atomic:
          neutron.list_ports: 5.5

This would put a 5.5 second limit on the average amount of
time spent listing ports. During the create_and_list_ports
test run.

This allows projects to put more fine-grained restrictions
on different types of operations (e.g. GET vs POST).

Change-Id: I752a53ae3b2f47a05057ad8d4688f3f74d75ecf0

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -625,6 +625,23 @@
         times: 10
         concurrency: 5
 
+  Dummy.dummy_timed_atomic_actions:
+    -
+      args:
+        number_of_actions: 5
+        sleep_factor: 1
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 3
+      sla:
+        max_avg_duration_per_atomic:
+          action_0: 1.0
+          action_1: 2.0
+          action_2: 3.0
+          action_3: 4.0
+          action_4: 5.0
+
   FakePlugin.testplugin:
     -
       runner:
