Add more bindings for bounce server scenario
Change-Id: Ia312885dff26aa60bccc662682e876a47f1a4296

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -395,6 +395,14 @@
             stop_start: 1
           -
             rescue_unrescue: 1
+          -
+            pause_unpause: 1
+          -
+            suspend_resume: 1
+          -
+            lock_unlock: 1
+          -
+            shelve_unshelve: 1
       runner:
         type: "constant"
         times: 2
