Add create-flavor and flavor-access-list scenario
Benchmark create-flavor and flavor-access-list
Nova API.

blueprint extend-api-benchmark-in-nova-scenarios

Change-Id: I870405aaaec727cfb3a0b460dcf60c6a7ca4b6d1

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -984,3 +984,31 @@
       sla:
         failure_rate:
           max: 0
+
+  NovaFlavors.create_flavor:
+    -
+      args:
+        ram: 500
+        vcpus: 1
+        disk: 1
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      sla:
+        failure_rate:
+          max: 0
+
+  NovaFlavors.create_and_list_flavor_access:
+    -
+      args:
+        ram: 500
+        vcpus: 1
+        disk: 1
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      sla:
+        failure_rate:
+          max: 0
