--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -1,4 +1,5 @@
 {% set image_name = "^(cirros.*uec|TestVM)$" %}
+{% set flavor_name = "m1.tiny" %}
 ---
   Authenticate.validate_cinder:
     -
@@ -362,7 +363,7 @@
         image:
           name: {{image_name}}
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
       runner:
         type: "constant"
         times: 2
@@ -394,7 +395,7 @@
           image:
             name: {{image_name}}
           flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
           servers_per_tenant: 1
       sla:
         failure_rate:
@@ -418,7 +419,7 @@
           image:
             name: {{image_name}}
           flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
           servers_per_tenant: 1
       sla:
         failure_rate:
@@ -586,3 +587,28 @@
       sla:
         failure_rate:
           max: 0
+
+  CinderVolumes.create_nested_snapshots_and_attach_volume:
+    -
+      args:
+          size:
+              min: 1
+              max: 1
+          nested_level: 2
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 1
+        servers:
+          image:
+            name: {{image_name}}
+          flavor:
+            name: {{flavor_name}}
+          servers_per_tenant: 2
+      sla:
+          failure_rate:
+            max: 0
