Make glance v2 the default
This adds some compatibility to ensure that both Glance wrappers
support both is_public and visibility kwargs.

Co-Authored-By: Andrey Kurilin <andr.kurilin@gmail.com>

Change-Id: If27fffe83b7f610c802fcb29c7442801ac6ca908

--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -123,7 +123,7 @@
           images_per_tenant: 1
           image_name: "image-context-test"
           image_args:
-            is_public: True
+            visibility: "public"
       sla:
         failure_rate:
           max: 0
