--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -680,7 +680,7 @@
           images_per_tenant: 1
           image_name: "rally-named-image-from-context"
           image_args:
-            is_public: True
+            visibility: "public"
       sla:
         failure_rate:
           max: 0
