Add possibility to balance usage of users
For the moment all users for tasks are taken randomly and
there is no way to balance them between tasks.
It may be very useful when we have
difference between first usage of tenant/user and all consecutive.
In this case we get different load results.

Therefore, add enum config option 'user_choice_method'
to 'users' context that defines approach for picking up users.
Two values are available:
- random
- round_robin

Default one is compatible with old approach - "random".

Also, update one of scenarios to use "round_robin" approach to make
sure it works.

Change-Id: I26fb090eb89c22f5d50529cb73b6ed54fc3d7e15

--- a/rally-jobs/rally-manila.yaml
+++ b/rally-jobs/rally-manila.yaml
@@ -23,12 +23,13 @@
         detailed: True
       runner:
         type: "constant"
-        times: 10
+        times: 12
         concurrency: 1
       context:
         users:
-          tenants: 1
-          users_per_tenant: 1
+          tenants: 3
+          users_per_tenant: 4
+          user_choice_method: "round_robin"
       sla:
         failure_rate:
           max: 0
