--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -237,6 +237,18 @@
 # (floating point value)
 #ironic_node_create_poll_interval = 1.0
 
+# Time(in sec) to sleep after creating a resource before polling for
+# the status. (floating point value)
+#magnum_bay_create_prepoll_delay = 5.0
+
+# Time(in sec) to wait for magnum bay to be created. (floating point
+# value)
+#magnum_bay_create_timeout = 1200.0
+
+# Time interval(in sec) between checks when waiting for bay creation.
+# (floating point value)
+#magnum_bay_create_poll_interval = 1.0
+
 # Delay between creating Manila share and polling for its status.
 # (floating point value)
 #manila_share_create_prepoll_delay = 2.0
