--- a/samples/tasks/scenarios/magnum/list-bays.yaml
+++ b/samples/tasks/scenarios/magnum/list-bays.yaml
@@ -1,57 +1,6 @@
 ---
-  MagnumBaymodels.list_baymodels:
+  MagnumBays.list_bays:
     -
-      runner:
-        type: "constant"
-        times: 40
-        concurrency: 20
-      context:
-        users:
-          tenants: 1
-          users_per_tenant: 1
-        baymodels:
-          image_id: "fedora-atomic-latest"
-          flavor_id: "m1.small"
-          master_flavor_id: "m1.small"
-          external_network_id: "public"
-          dns_nameserver: "8.8.8.8"
-          docker_volume_size: 5
-          coe: "kubernetes"
-          network_driver: "flannel"
-          docker_storage_driver: "devicemapper"
-          master_lb_enabled: False
-      sla:
-        failure_rate:
-          max: 0
-
-    -
-      runner:
-        type: "constant"
-        times: 40
-        concurrency: 20
-      context:
-        users:
-          tenants: 1
-          users_per_tenant: 1
-        baymodels:
-          image_id: "fedora-atomic-latest"
-          flavor_id: "m1.small"
-          master_flavor_id: "m1.small"
-          external_network_id: "public"
-          dns_nameserver: "8.8.8.8"
-          docker_volume_size: 5
-          coe: "swarm"
-          network_driver: "docker"
-          docker_storage_driver: "devicemapper"
-          master_lb_enabled: False
-      sla:
-        failure_rate:
-          max: 0
-
-  MagnumBays.create_and_list_bays:
-    -
-      args:
-        node_count: 1
       runner:
         type: "constant"
         times: 1
@@ -62,15 +11,48 @@
           users_per_tenant: 1
         baymodels:
           image_id: "fedora-atomic-latest"
-          flavor_id: "m1.small"
-          master_flavor_id: "m1.small"
           external_network_id: "public"
           dns_nameserver: "8.8.8.8"
+          flavor_id: "m1.small"
           docker_volume_size: 5
-          coe: "swarm"
+          network_driver: "flannel"
+          coe: "kubernetes"
+        bays:
+          node_count: 2
+    -
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        baymodels:
+          image_id: "fedora-atomic-latest"
+          external_network_id: "public"
+          dns_nameserver: "8.8.8.8"
+          flavor_id: "m1.small"
+          docker_volume_size: 5
           network_driver: "docker"
-          docker_storage_driver: "devicemapper"
-          master_lb_enabled: False
-      sla:
-        failure_rate:
-          max: 0
+          coe: "swarm"
+        bays:
+          node_count: 2
+    -
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        baymodels:
+          image_id: "ubuntu-mesos"
+          external_network_id: "public"
+          dns_nameserver: "8.8.8.8"
+          flavor_id: "m1.small"
+          network_driver: "docker"
+          coe: "mesos"
+        bays:
+          node_count: 2
