--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -526,6 +526,31 @@
       sla:
         failure_rate:
           max: 0
+    -
+      args:
+        sleep: 0.6
+      runner:
+        type: "rps"
+        rps: 2
+        times: 5
+        timeout: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+    -
+      args:
+        sleep: 0.6
+      runner:
+        type: "constant"
+        concurrency: 2
+        times: 4
+        timeout: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+
 
   Dummy.dummy_exception:
     -
