--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -629,3 +629,19 @@
       sla:
           failure_rate:
             max: 0
+
+  CinderVolumes.create_volume_and_clone:
+    -
+      args:
+        size: 1
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+          failure_rate:
+            max: 0
