Fix mistake parameter auto_assign_nics in nova.jaml
Replace auto_assign_nics to auto_assign_nic in rally-jobs.

Change-Id: I61a53638d66aa11db3c0cb66b53d2409da5bb295

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -521,7 +521,7 @@
             name: "^ram64$"
         image:
             name: {{image_name}}
-        auto_assign_nics: false
+        auto_assign_nic: false
       runner:
         type: "constant"
         times: 2
