Add the argument image into create_and_upload_volume_to_image
I think it is better to add the argument image to create_and_upload_volume_to_image.
Now possibly upload a empty volume to image, it is meaningless to the business.

Closes-Bug: #1582117
Change-Id: Ie10d17a422fb5b1635dd8d6d7e235e7327843f17

--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -480,6 +480,8 @@
     -
       args:
         size: 1
+        image:
+          name: {{image_name}}
       runner:
         type: "constant"
         times: 1
@@ -498,6 +500,8 @@
       args:
         size: 1
         volume_type: test
+        image:
+          name: {{image_name}}
       runner:
         type: "constant"
         times: 1
