[CI] Add missing SLA to actually bugs check bugs in gates
Without SLA we are not checking anything.

Change-Id: I98916b94ea8a83c115725f98faed54276f6ebf28

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -538,6 +538,9 @@
         users:
           tenants: 1
           users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
     -
       args:
         sleep: 0.6
@@ -550,7 +553,9 @@
         users:
           tenants: 1
           users_per_tenant: 1
-
+      sla:
+        failure_rate:
+          max: 0
 
   Dummy.dummy_exception:
     -
