Add boot_and_delete_server samples and functional test
Add the argument "auto_assign_nic: true" in boot_and_delete_server
functional test, and add a related sample.

Change-Id: I7e596c29ae5e9d9c6e7db4572b5e80a60f0dd0bb

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -75,6 +75,7 @@
             name: {{flavor_name}}
         image:
             name: {{image_name}}
+        auto_assign_nic: true
       runner:
         type: "constant"
         times: 2
